Added more textfields in Tourlist, Editable and functioning now with spring